@@ -19,11 +19,20 @@ DUMB: support tex fonts
 TODO: perl-shell-window? perl-unix-socket?
 TODO: command line editing when icanon?
 
-        - avoid spurious redraws of the bg image when bg is transparent or
-          when using 'root' mode (Emanuele Giaquinta).
-        - make OSC 20 simpler and more correct (Emanuele Giaquinta).
+TODO: decrqm
+http://ue.tst.eu/71d7dbd1fcfeaa7d2a4b96eb957d570c.txt
+	- the "schmorp=north korea dickey=south korea" release.
         - fix regression in urxvtd that prevented options from being correctly
           set (reported by Michal Vaner).
+        - INCOMPATIBLE CHANGE: make OSC 20 simpler and more correct
+          (Emanuele Giaquinta).
+	- implement xterm's horribly broken 1005 mouse reporting code,
+          and an alternative 1015 code that works in non-utf-8 locales
+          and has fewer limitations.
+	- fix a possible bug where mouse mouse notifications didn't work after
+          startup for the upper left corner.
+        - avoid spurious redraws of the bg image when bg is transparent or
+          when using 'root' mode (Emanuele Giaquinta).
         - fix build on XFree86.
 
 9.09 Sat Nov 13 01:39:07 CET 2010
